# personal_ledger_server

./: .dockerignore  .gitignore  404.html  Cargo.toml  Dockerfile  Makefile.toml  README.md  configuration.toml  configuration.yaml  docker-compose.yaml  index.html  mkdocs.yaml  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  env.sample
.github/workflows/: codecov.yaml  mkdocs.yaml
api_specification/: index.html
config/: default.yaml  development.yaml  production.yaml  testing.yaml
configuration/: base.yaml  development.yaml  local.yaml  production.yaml
database_design/: index.html
docs/: README.md  api_specification.md  api_specification.yaml  database_design.md  getting_started.md
docs/css/: neoteroi-mkdocsoad.css
docs/javascript/: plausable.js
getting_started/: index.html
migrations/: 0000_postgres_extensions.sql  0001_create_things_table.sql  0002_create_companies.sql  0002_create_companies_table.sql
postgres_dev/: README.md  docker-compose.yaml
search/: search_index.json
src/: api.rs  configuration.rs  error.rs  lib.rs  main.rs  prelude.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_thing.rs  thing_description.rs  thing_name.rs
src/domain/things/: mod.rs  thing_description.rs  thing_name.rs
src/handlers/: companies.rs  errors.rs  mod.rs  ping.rs  things.rs
src/routes/: companies.rs  mod.rs  ping.rs  things.rs
src/services/: error.rs  mod.rs  thing_builder_consuming.rs  things.rs  user.rs
tests/: helpers.rs  ping.rs  things.rs
tests/api/: helpers.rs  main.rs  ping.rs  things.rs
