[package]
name = "personal_ledger_server"
authors = ["Ian Teda <ian@teda.id.au>"]
version = "0.1.0"
edition = "2021"
description = "The backend api server for Personal Ledger"
documentation = "https://ianteda.github.io/personal_ledger/"
homepage = "https://ianteda.github.io/personal_ledger/"
repository = "https://github.com/IanTeda/personal_ledger_server"
readme = "README.md"
license-file = "LICENSE.txt"
keywords = ["personal finance", "finance", "ledger", "money", "money tracking"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "personal_ledger_server"
path = "src/main.rs"

[dependencies]
actix-web = { version = "4" }
config = { version = "0.14.0", default-features = false, features = ["yaml"] }
env_logger = "0.11.1"
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "tracing"] }
tracing = { version = "0.1" }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = {version = "0.3"}
tracing-log = {version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "json", "fmt"] }

[dev-dependencies]
actix-rt = { version = "2" }
reqwest = "0.11"
once_cell = "1.19.0"
