[package]
name = "personal_ledger_server"
authors = ["Ian Teda <ian@teda.id.au>"]
version = "0.1.0"
edition = "2021"
description = "The backend api server for Personal Ledger"
documentation = "https://ianteda.github.io/personal_ledger/"
homepage = "https://ianteda.github.io/personal_ledger/"
repository = "https://github.com/IanTeda/personal_ledger_server"
readme = "README.md"
license-file = "LICENSE.txt"
keywords = ["personal finance", "finance", "ledger", "money", "money tracking"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "personal_ledger_server"
path = "src/main.rs"

[dependencies]
actix-web = { version = "4" }
chrono = { version = "0.4.22", default-features = false, features = [
    "clock",
    "serde",
] }
config = { version = "0.14.0", default-features = false, features = ["yaml"] }
env_logger = "0.11.1"
futures = "0.3.29"
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
serde-aux = { version = "4.5.0" }
serde_json = "1.0.108"
sqlx = { version = "0.7.4", features = [
    "chrono",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
] }
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "tracing"] }
tracing = { version = "0.1" }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = { version = "0.3" }
tracing-log = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
    "registry",
] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
actix-rt = "2"
fake = { version = "2.9.2", features = ["derive", "chrono-tz"] }
once_cell = "1.19.0"
reqwest = "0.12.1"
